--- a/src/components/Authentication/Login/Login.css
+++ b/src/components/Authentication/Login/Login.css
@@ -3,6 +3,7 @@
   border-radius: 5px;
   padding: 40px 15px;
   margin: 40px 0;
+  width: 50%;
 }
 .horizantal-line {
   display: flex;
@@ -41,4 +42,13 @@ span {
   color: black;
   right: 10px;
   cursor: pointer;
+}
+@media screen and (max-width: 992px) {
+  .login-box {
+    width: 100%;
+  }
+  .social-login button {
+    width: 100%;
+    margin-bottom: 5px;
+  }
 }
